--- a/buildenv/Dockerfile.part
+++ b/buildenv/Dockerfile.part
@@ -15,24 +15,24 @@ RUN echo "Server = $ARCH_DIST_REPO_URL/\$arch/\$repo" > /etc/pacman.d/mirrorlist
 	&& pacman-key --init \
 	&& pacman-key --populate archlinuxarm
 
-RUN pacman --noconfirm --ask=4 -Syy \
-	&& pacman --needed --noconfirm --ask=4 -S \
+
+RUN pacman --noconfirm --ask=4 -Syy
+RUN pacman --needed --noconfirm --ask=4 -S \
 		glibc \
 		openssl \
 		openssl-1.0 \
-		openssl-1.1 \
-	&& pacman --needed --noconfirm --ask=4 -S \
-		pacman \
-	&& pacman-db-upgrade \
-	&& pacman-key --init \
-	&& pacman --needed --noconfirm -S \
+		openssl-1.1
+# RUN pacman --needed --noconfirm --ask=4 -S
+RUN pacman-db-upgrade
+RUN pacman-key --init
+RUN pacman --needed --noconfirm -S \
 		p11-kit \
 		archlinux-keyring \
 		ca-certificates \
 		ca-certificates-mozilla \
-		ca-certificates-utils \
-	&& pacman --noconfirm --ask=4 -Syu \
-	&& pacman --needed --noconfirm -S \
+		ca-certificates-utils
+RUN pacman --noconfirm --ask=4 -Syu
+RUN pacman --needed --noconfirm -S \
 		base \
 		base-devel \
 		devtools \
@@ -40,10 +40,25 @@ RUN pacman --noconfirm --ask=4 -Syy \
 		inetutils \
 		vim \
 		wget \
-		python \
 		distcc \
 		jq \
-	&& (pacman --noconfirm -Sc || true)
+		git
+RUN (pacman --noconfirm -Sc || true)
+
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python/python-3.11.8-1-aarch64.pkg.tar.xz
+# 
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python-setuptools/python-setuptools-1:68.2.2-1-any.pkg.tar.xz
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python-packaging/python-packaging-23.2-1-any.pkg.tar.xz
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python-more-itertools/python-more-itertools-9.1.1-4-any.pkg.tar.xz
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python-pyserial/python-pyserial-3.5-5-any.pkg.tar.xz
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python-ordered-set/python-ordered-set-4.1.0-4-any.pkg.tar.xz
+# RUN pacman -U --noconfirm https://alaa.ad24.cz/packages/p/python-jaraco/python-jaraco-2022.2.21-2-any.pkg.tar.xz
+
+# RUN python3.11 -m venv pikvm-env
+# RUN echo "source /pikvm-env/bin/activate" > /root/.bashrc
+# RUN pip install setuptools packaging more-itertools
+
+# RUN sed -i -e "s/^#IgnorePkg\s*=/IgnorePkg = python*/" /etc/pacman.conf
 
 ARG TARGET_REPO_NAME
 ENV TARGET_REPO_NAME $TARGET_REPO_NAME
@@ -57,6 +72,8 @@ RUN ( \
 		|| pacman-key --keyserver hkps://pgp.mit.edu:443 -r $TARGET_REPO_KEY \
 	) \
 	&& pacman-key --lsign-key $TARGET_REPO_KEY
+# RUN pacman-key --add /home/alarm/.gnupg/public.key
+# RUN pacman-key --lsign-key $TARGET_REPO_KEY
 
 ARG ALARM_UID
 ENV ALARM_UID $ALARM_UID
