--- a/packages/kvmd/PKGBUILD
+++ b/packages/kvmd/PKGBUILD
@@ -3,32 +3,32 @@
 
 
 _variants=(
-	v0-hdmi:zero2w
-	v0-hdmi:rpi2
-	v0-hdmi:rpi3
+	# v0-hdmi:zero2w
+	# v0-hdmi:rpi2
+	# v0-hdmi:rpi3
 
-	v0-hdmiusb:zero2w
-	v0-hdmiusb:rpi2
-	v0-hdmiusb:rpi3
+	# v0-hdmiusb:zero2w
+	# v0-hdmiusb:rpi2
+	# v0-hdmiusb:rpi3
 
-	v1-hdmi:zero2w
-	v1-hdmi:rpi2
-	v1-hdmi:rpi3
+	# v1-hdmi:zero2w
+	# v1-hdmi:rpi2
+	# v1-hdmi:rpi3
 
-	v1-hdmiusb:zero2w
-	v1-hdmiusb:rpi2
-	v1-hdmiusb:rpi3
+	# v1-hdmiusb:zero2w
+	# v1-hdmiusb:rpi2
+	# v1-hdmiusb:rpi3
 
-	v2-hdmi:zero2w
-	v2-hdmi:rpi3
+	# v2-hdmi:zero2w
+	# v2-hdmi:rpi3
 	v2-hdmi:rpi4
 
-	v2-hdmiusb:rpi4
+	# v2-hdmiusb:rpi4
 
-	v3-hdmi:rpi4
+	# v3-hdmi:rpi4
 
-	v4mini-hdmi:rpi4
-	v4plus-hdmi:rpi4
+	# v4mini-hdmi:rpi4
+	# v4plus-hdmi:rpi4
 )
 
 
@@ -76,7 +76,7 @@ depends=(
 	python-pyrad
 	python-ldap
 	python-zstandard
-	libgpiod1
+	libgpiod
 	freetype2
 	"v4l-utils>=1.22.1-1"
 	"nginx-mainline>=1.25.1"
@@ -129,7 +129,7 @@ makedepends=(
 	python-setuptools
 	python-pip
 )
-source=("$url/archive/v$pkgver.tar.gz")
+source=("git+https://github.com/qeezzo/kvmd.git#branch=webrtc-client")
 md5sums=(SKIP)
 backup=(
 	etc/kvmd/{override,logging,auth,meta}.yaml
@@ -147,7 +147,7 @@ backup=(
 package_kvmd() {
 	install=$pkgname.install
 
-	cd "$srcdir/kvmd-$pkgver"
+	cd "$srcdir/kvmd"
 	pip install --root="$pkgdir" --no-deps .
 
 	install -Dm755 -t "$pkgdir/usr/bin" scripts/kvmd-{bootconfig,gencert,certbot}
@@ -196,10 +196,10 @@ for _variant in "${_variants[@]}"; do
 	_base=${_platform%-*}
 	_video=${_platform#*-}
 	eval "package_kvmd-platform-$_platform-$_board() {
-		cd \"kvmd-\$pkgver\"
+		cd \"kvmd\"
 
 		pkgdesc=\"PiKVM platform configs - $_platform for $_board\"
-		depends=(kvmd=$pkgver-$pkgrel \"linux-rpi-pikvm>=5.15.68-3\")
+		depends=(kvmd=$pkgver-$pkgrel \"linux-rpi>=5.15.68-3\")
 
 		backup=(
 			etc/sysctl.d/99-kvmd.conf
