--- a/packages/raspberrypi-hdmi/PKGBUILD
+++ b/packages/raspberrypi-hdmi/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Control HDMI output on Raspberry Pi"
 url=""
 license=(GPL)
 arch=(any)
-depends=(raspberrypi-firmware)
+depends=(firmware-raspberrypi)
 source=(raspberrypi-hdmi-off.{service,timer})
 md5sums=(SKIP SKIP)
 
