--- a/packages/ustreamer/PKGBUILD
+++ b/packages/ustreamer/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Lightweight and fast MJPEG-HTTP streamer"
 url="https://github.com/pikvm/ustreamer"
 license=(GPL)
 arch=(i686 x86_64 armv6h armv7h aarch64)
-depends=(janus-gateway-pikvm alsa-lib opus speexdsp libjpeg libevent libbsd libgpiod1 systemd)
+depends=(janus-gateway-pikvm alsa-lib opus speexdsp libjpeg libevent libbsd libgpiod systemd)
 makedepends=(gcc make systemd)
 source=(${pkgname}::"git+https://github.com/pikvm/ustreamer#commit=v${pkgver}")
 md5sums=(SKIP)
